# port-manager

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
memory-bank/: activeContext.md  memory-bank.md  productContext.md  progress.md  project-description.md  projectbrief.md  systemPatterns.md  techContext.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: mod.rs  ports.rs
src-tauri/src/models/: mod.rs  port_entry.rs  settings.rs
src-tauri/src/services/: actions.rs  discovery.rs  mod.rs  settings_service.rs
src/components/ports/: port-list.test.tsx  port-list.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  select.tsx  skeleton.tsx  table.tsx
src/features/ports/: api.ts  selectors.test.ts  selectors.ts  types.ts
src/lib/: tauri.ts
src/stores/: port-filters.ts
