[package]
name = "port-manager"
version = "0.1.0"
description = "Windows-first localhost port discovery desktop app"
authors = ["Sinan"]
edition = "2021"

[lib]
name = "port_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
log = "0.4"
netstat2 = "0.11"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
thiserror = "2"
